--- a/adm/style/acp_forumapi_body.html
+++ b/adm/style/acp_forumapi_body.html
@@ -1,15 +1,15 @@
 <!-- INCLUDE overall_header.html -->
 
-<h1>{L_ACP_DEMO_TITLE}</h1>
+<h1>{L_ACP_FORUMAPI_TITLE}</h1>
 
 <form id="acp_board" method="post" action="{U_ACTION}">
 
 	<fieldset>
 		<legend>{L_SETTINGS}</legend>
 		<dl>
-			<dt><label for="acme_demo_goodbye">{L_ACP_DEMO_GOODBYE}{L_COLON}</label></dt>
-			<dd><label><input type="radio" class="radio" name="acme_demo_goodbye" value="1" <!-- IF ACME_DEMO_GOODBYE -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
-				<label><input type="radio" class="radio" name="acme_demo_goodbye" value="0" <!-- IF not ACME_DEMO_GOODBYE -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
+			<dt><label for="forumapi_userinfo">{L_ACP_FORUMAPI_USERINFO}{L_COLON}</label></dt>
+			<dd><label><input type="radio" class="radio" name="forumapi_userinfo" value="1" <!-- IF FORUMAPI_USERINFO -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
+				<label><input type="radio" class="radio" name="forumapi_userinfo" value="0" <!-- IF not FORUMAPI_USERINFO -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
 		</dl>
 	</fieldset>
 
